<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android_projet.yizhe_xiang.flashcard.other.OtherFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@android:color/holo_blue_bright" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@mipmap/fanyizhe" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yizhe"
                    android:textColor="@android:color/holo_blue_bright"
                    android:textSize="30sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yizheid" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/holo_blue_bright" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/lixiang" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/magiciendecode"
                    android:textColor="@android:color/holo_blue_bright"
                    android:textSize="30sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/magiciendecodeid" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@android:color/holo_blue_bright" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/anais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ceshi xiaZai"
                android:visibility="invisible" />

            <EditText
                android:layout_weight="1"
                android:id="@+id/other_bonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/http" />

            <EditText
                android:id="@+id/addrhttp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/noCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nocard"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="36sp"
            android:textStyle="normal|bold|italic"
            android:visibility="invisible" />

    </LinearLayout>
</ScrollView>

