<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android_projet.yizhe_xiang.flashcard.play.OneCardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/facile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/facile" />

            <RadioButton
                android:id="@+id/difficile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/difficile" />

            <RadioButton
                android:id="@+id/trivial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/trivial" />

            <Button
                android:id="@+id/levelbouton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ok_selector"
                android:gravity="center" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/question"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="26sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/timeLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/timeLeft"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="24sp"
                android:textStyle="italic|bold"
                android:visibility="invisible" />


            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="24sp"
                android:textStyle="italic|bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/cardquestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_green_light"
            android:textSize="20sp"
            android:textStyle="normal|bold" />

        <ImageView
            android:id="@+id/carimgid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/mp3button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/listen_button_selector" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/votreanswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="@string/anwserHin"
                android:textColor="@android:color/holo_green_light"
                android:textSize="20sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/submit_selector" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textAnswer"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/cardanswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/cardLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/cardBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>