<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manage.ShowOneCardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@android:color/holo_blue_bright" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Id : "
                android:textColor="@color/colorMyBlue"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/idCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorMyBlue"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Box : "
                android:textColor="@color/colorMyBlue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/showBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorMyBlue"
                android:textSize="18sp" />

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/showEasy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/facile" />

            <RadioButton
                android:id="@+id/showDifficult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/difficile" />

            <RadioButton
                android:id="@+id/showTrivial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/trivial" />

            <RadioButton
                android:id="@+id/normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Normal" />

        </RadioGroup>

        <EditText
            android:id="@+id/cardQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_green_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cardReponse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_green_light"
            android:textSize="20sp"
            android:textStyle="italic" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/cardImage"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/cardAudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/listen_button_selector"/>

            <Button
                android:id="@+id/cardModify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/modify_selector"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@android:color/holo_blue_bright" />

    </LinearLayout>
</ScrollView>